[package]
name = "metrics_client"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.5", features = ["tls"] }
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
opentelemetry = { version = "0.14", features = ["metrics"] }

[build-dependencies]
tonic-build = "0.5"
prost-build = "0.9"

